test/files/neg/t12159.check
s.scala:11: error: not found: type ZZ
class Z extends ZZ // fail compile: remove when source flags are restored
                ^
1 error
